--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,24 @@
+.holder{
+	display:grid;
+	grid-template-columns:repeat(2,100px);
+	grid-template-rows:repeat(2,100px);
+}
+.item{
+	height:100px;
+	width:100px;
+}
+.item-1{
+	background:black;
+}
+.item-2{
+	background:blue;
+}
 
-/* Your CSS Code here. */
+.item-3{
+	background:green;
+}
+
+.item-4{
+	background:red;
+}
+
